Entering Edit Mode when Viewport Display set as Wire or Bounds leads to crash #79066

Closed
opened 2020-07-18 22:25:14 +02:00 by Bohdan Lvov · 19 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.48

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-17 19:20, hash: aa8279648e
Worked: 2.83.2

Short description of error
Entering Edit Mode when Viewport Display set as Wire or Bounds leads to the instant crash

Exact steps for others to reproduce the error

  1. Create a scene
  2. Select the Cube, set Viewport Display in the Object Properties to WIre or Bounds
  3. Press Tab.
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.48 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-17 19:20, hash: `aa8279648e` Worked: 2.83.2 **Short description of error** Entering Edit Mode when Viewport Display set as Wire or Bounds leads to the instant crash **Exact steps for others to reproduce the error** 1. Create a scene 2. Select the Cube, set Viewport Display in the Object Properties to WIre or Bounds 3. Press Tab.
Author

Added subscriber: @ostapblender

Added subscriber: @ostapblender

#79142 was marked as duplicate of this issue

#79142 was marked as duplicate of this issue

#79138 was marked as duplicate of this issue

#79138 was marked as duplicate of this issue

#79128 was marked as duplicate of this issue

#79128 was marked as duplicate of this issue

#79095 was marked as duplicate of this issue

#79095 was marked as duplicate of this issue

#79071 was marked as duplicate of this issue

#79071 was marked as duplicate of this issue

#79069 was marked as duplicate of this issue

#79069 was marked as duplicate of this issue
Member

Added subscribers: @Jeroen-Bakker, @Alaska

Added subscribers: @Jeroen-Bakker, @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can reproduce this issue with the viewport display set to bounds.

Bisecting points to 9582797d4b. Not sure why, doesn't look like it should impact this.
CC @Jeroen-Bakker

System Information:
Operating system: Linux-5.7.0-1-amd64-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce RTX 2060 Super 440.100
Blender version: 2.90.0 Alpha, branch: master, commit date: 2020-07-18 16:26, hash: b8601b64c7

# Blender 2.90.0, Commit date: 2020-07-18 16:26, Hash b8601b64c7cb
bpy.context.space_data.context = 'OBJECT'  # Property
bpy.context.object.display_type = 'BOUNDS'  # Property
bpy.ops.object.editmode_toggle()  # Operator

# backtrace
.../blender(BLI_system_backtrace+0x20) [0x82449c0]
.../blender() [0xe229da]
/lib/x86_64-linux-gnu/libc.so.6(+0x3b800) [0x7f1691c26800]
.../blender(GPU_batch_vao_cache_clear+0) [0x6ea3400]
.../blender(GPU_batch_elembuf_set+0x11) [0x6ea37e1]
.../blender() [0x12a0c32]
.../blender() [0x12a4448]
.../blender() [0x12a45b8]
.../blender() [0x10d53f5]
.../blender() [0x8245b9f]
.../blender() [0x8246c44]
.../blender() [0x10d3a85]
.../blender() [0x10d3d3b]
.../blender() [0x10d62b2]
.../blender(BLI_task_graph_work_and_wait+0x4e) [0x824505e]
.../blender() [0x122c894]
.../blender(DRW_draw_render_loop_ex+0x258) [0x122e908]
.../blender(view3d_main_region_draw+0x8f) [0x18845ef]
.../blender(ED_region_do_draw+0x801) [0x147a501]
.../blender(wm_draw_update+0x4ca) [0x10dad8a]
.../blender(WM_main+0x30) [0x10d8cf0]
.../blender(main+0x311) [0xd5c071]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xeb) [0x7f1691c11e0b]
.../blender(_start+0x2a) [0xe1f1ea]
I can reproduce this issue with the viewport display set to `bounds`. Bisecting points to 9582797d4b. Not sure why, doesn't look like it should impact this. CC @Jeroen-Bakker **System Information:** Operating system: Linux-5.7.0-1-amd64-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce RTX 2060 Super 440.100 Blender version: 2.90.0 Alpha, branch: master, commit date: 2020-07-18 16:26, hash: `b8601b64c7` ``` # Blender 2.90.0, Commit date: 2020-07-18 16:26, Hash b8601b64c7cb bpy.context.space_data.context = 'OBJECT' # Property bpy.context.object.display_type = 'BOUNDS' # Property bpy.ops.object.editmode_toggle() # Operator # backtrace .../blender(BLI_system_backtrace+0x20) [0x82449c0] .../blender() [0xe229da] /lib/x86_64-linux-gnu/libc.so.6(+0x3b800) [0x7f1691c26800] .../blender(GPU_batch_vao_cache_clear+0) [0x6ea3400] .../blender(GPU_batch_elembuf_set+0x11) [0x6ea37e1] .../blender() [0x12a0c32] .../blender() [0x12a4448] .../blender() [0x12a45b8] .../blender() [0x10d53f5] .../blender() [0x8245b9f] .../blender() [0x8246c44] .../blender() [0x10d3a85] .../blender() [0x10d3d3b] .../blender() [0x10d62b2] .../blender(BLI_task_graph_work_and_wait+0x4e) [0x824505e] .../blender() [0x122c894] .../blender(DRW_draw_render_loop_ex+0x258) [0x122e908] .../blender(view3d_main_region_draw+0x8f) [0x18845ef] .../blender(ED_region_do_draw+0x801) [0x147a501] .../blender(wm_draw_update+0x4ca) [0x10dad8a] .../blender(WM_main+0x30) [0x10d8cf0] .../blender(main+0x311) [0xd5c071] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xeb) [0x7f1691c11e0b] .../blender(_start+0x2a) [0xe1f1ea] ```
Member

Added subscriber: @kopias

Added subscriber: @kopias
Member

Added subscriber: @buhr

Added subscriber: @buhr
Member

Added subscriber: @deadpin

Added subscriber: @deadpin
Jeroen Bakker self-assigned this 2020-07-20 20:41:26 +02:00
Member

Added subscriber: @GrahamHeld

Added subscriber: @GrahamHeld
Member
diff --git a/source/blender/draw/intern/draw_cache_extract_mesh.c b/source/blender/draw/intern/draw_cache_extract_mesh.c
index 1737f8b2ff9..c95980be7d5 100644
--- a/source/blender/draw/intern/draw_cache_extract_mesh.c
+++ b/source/blender/draw/intern/draw_cache_extract_mesh.c
@@ -890,7 +890,7 @@ static void extract_tris_finish(const MeshRenderData *mr, void *ibo, void *_data
   MeshExtract_Tri_Data *data = _data;
   GPU_indexbuf_build_in_place(&data->elb, ibo);
   /* HACK: Create ibo sub-ranges and assign them to each #GPUBatch. */
-  if (mr->use_final_mesh) {
+  if (mr->use_final_mesh && mr->cache->surface_per_mat && mr->cache->surface_per_mat[0]) {
     for (int i = 0; i < mr->mat_len; i++) {
       /* Multiply by 3 because these are triangle indices. */
       const int mat_start = data->tri_mat_start[i];

Fixes the issue. Still need to test other situations.

``` diff --git a/source/blender/draw/intern/draw_cache_extract_mesh.c b/source/blender/draw/intern/draw_cache_extract_mesh.c index 1737f8b2ff9..c95980be7d5 100644 --- a/source/blender/draw/intern/draw_cache_extract_mesh.c +++ b/source/blender/draw/intern/draw_cache_extract_mesh.c @@ -890,7 +890,7 @@ static void extract_tris_finish(const MeshRenderData *mr, void *ibo, void *_data MeshExtract_Tri_Data *data = _data; GPU_indexbuf_build_in_place(&data->elb, ibo); /* HACK: Create ibo sub-ranges and assign them to each #GPUBatch. */ - if (mr->use_final_mesh) { + if (mr->use_final_mesh && mr->cache->surface_per_mat && mr->cache->surface_per_mat[0]) { for (int i = 0; i < mr->mat_len; i++) { /* Multiply by 3 because these are triangle indices. */ const int mat_start = data->tri_mat_start[i]; ``` Fixes the issue. Still need to test other situations.

This issue was referenced by 8c916a3aec

This issue was referenced by 8c916a3aecc49351dbbb0d22c8bc0e5712b9e9ac
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscribers: @Pasang, @rjg

Added subscribers: @Pasang, @rjg
Member

Added subscriber: @MarceloGomez

Added subscriber: @MarceloGomez
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:26:16 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79066
No description provided.