Fix T79066: Entering Edit Mode when Viewport Display set as Wire or Bounds leads to crash